/*
  CA - Distributed System
  Author: Sergio Oliveira - x23170981@student.ncirl.ie
  Date: 13 Apr 2024

  Lecturer: Mark Cudden

  This is refers a simple greeting message.
  Unary RPC

  References:
    https://protobuf.dev/reference/java/java-generated/#invocation
    https://grpc.io/docs/languages/java/quickstart/
    https://grpc.io/docs/languages/java/basics/
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.CA.gRPC";
option java_outer_classname = "WelcomeMsgProto";


//Service definition - Unary RPC
service Greeter
{
  //Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  //!IMPORTANT - I WILL INCLUDE NEW MSG
}

//The request message containing the user's name.
message HelloRequest
{
  string name = 1; //The name of the user.
}

//The response message containing the greetings
message HelloReply
{
  string message = 1; // The greeting message.
}

